logs/validate.20260325-174400.log
error[E0449]: visibility qualifiers are not permitted here
   --> src/Chap65/UnionFindStEph.rs:586:9
    |
586 |         pub open spec fn spec_unionfindsteph_wf(&self) -> bool {
    |         ^^^ help: remove the qualifier
    |
    = note: trait items always share the visibility of their trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0449`.
Elapsed: 11s
